--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "css-loader": "^0.24.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
-    "pug-html-loader": "^1.0.8",
+    "pug": "^2.0.0-beta5",
+    "pug-loader": "^2.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
