--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "build/index.js",
   "scripts": {
     "build": "webpack",
+    "build:dev": "webpack -w",
+    "start:dev": "webpack-dev-server --content-base ./build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -24,6 +26,7 @@
     "pug": "^2.0.0-beta5",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0"
   }
 }
