--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
   "author": "qarren@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "css-loader": "^0.24.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "postcss-loader": "^0.11.0",
     "pug": "^2.0.0-beta5",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
+  },
+  "dependencies": {
+    "three": "^0.80.1"
   }
 }
